// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PipelineVersionList > calls Apis to list pipeline versions, sorted by creation time in descending order 1`] = `
<DocumentFragment>
  <div>
    <div
      class="pageOverflowHidden_f15djeb2"
    >
      <div>
        <div
          class="MuiFormControl-root MuiTextField-root filterBox_frxzdj2"
          spellcheck="false"
          style="height: 48px; max-width: 100%; width: 100%;"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root noMargin_fl8qkup MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined"
            data-shrink="true"
            for="tableFilterBox"
            id="tableFilterBox-label"
          >
            Filter
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root noLeftPadding_f106pxd4 MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart"
          >
            <div
              class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                style="color: rgb(128, 134, 139); padding-right: 16px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
              </svg>
            </div>
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart"
              id="tableFilterBox"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-41 MuiOutlinedInput-notchedOutline filterBorderRadius_f1ypp5hy"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled-43 PrivateNotchedOutline-legendNotched-44"
              >
                <span>
                  Filter
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="header_f15jqnss"
      >
        <div
          class="columnName_f1kdqshe cell_fy8nr2z selectionToggle_f1ds3nvo"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-45 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
          >
            <span
              class="MuiIconButton-label"
            >
              <input
                class="PrivateSwitchBase-input-48"
                data-indeterminate="false"
                type="checkbox"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </span>
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 20%;"
          title="Version name"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Version name
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 60%;"
          title="Description"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x"
            role="button"
            tabindex="0"
            title="Cannot sort by this column"
          >
            Description
          </span>
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 20%;"
          title="Uploaded on"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x MuiTableSortLabel-active"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Uploaded on
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="scrollContainer_fea2b5v"
        style="min-height: 60px;"
      >
        <div
          class="expandableContainer_f1l0zr01"
        >
          <div
            aria-checked="false"
            class="tableRow row_f12b5y4d"
            data-row-id="test-pipeline-version-id0"
            data-testid="table-row"
            role="checkbox"
            tabindex="-1"
          >
            <div
              class="cell_fy8nr2z selectionToggle_f1ds3nvo"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-45 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <input
                    class="PrivateSwitchBase-input-48"
                    data-indeterminate="false"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 20%;"
            >
              <a
                class="link_f3dwag7"
                href="/pipelines/details/pipeline/version/test-pipeline-version-id0"
                title="Name: "
              >
                test pipeline version name0
              </a>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 60%;"
            >
              <span
                class=""
                title=""
              >
                <span />
              </span>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 20%;"
            >
              -
            </div>
          </div>
        </div>
        <div
          class="expandableContainer_f1l0zr01"
        >
          <div
            aria-checked="false"
            class="tableRow row_f12b5y4d"
            data-row-id="test-pipeline-version-id1"
            data-testid="table-row"
            role="checkbox"
            tabindex="-1"
          >
            <div
              class="cell_fy8nr2z selectionToggle_f1ds3nvo"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-45 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <input
                    class="PrivateSwitchBase-input-48"
                    data-indeterminate="false"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 20%;"
            >
              <a
                class="link_f3dwag7"
                href="/pipelines/details/pipeline/version/test-pipeline-version-id1"
                title="Name: "
              >
                test pipeline version name1
              </a>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 60%;"
            >
              <span
                class=""
                title=""
              >
                <span />
              </span>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 20%;"
            >
              -
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer_f1fl9hjk"
      >
        <span
          class="fzbgmju"
        >
          Rows per page:
        </span>
        <div
          class="MuiFormControl-root MuiTextField-root verticalAlignInitial_fclh73n rowsPerPage_fvpkhlp"
        >
          <div
            class="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
          >
            <div
              aria-haspopup="listbox"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
              role="button"
              tabindex="0"
            >
              10
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              tabindex="-1"
              value="10"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSelect-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
        <button
          class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </span>
        </button>
        <button
          class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PipelineVersionList > calls Apis to list pipeline versions, sorted by pipeline version name in descending order 1`] = `
<DocumentFragment>
  <div>
    <div
      class="pageOverflowHidden_f15djeb2"
    >
      <div>
        <div
          class="MuiFormControl-root MuiTextField-root filterBox_frxzdj2"
          spellcheck="false"
          style="height: 48px; max-width: 100%; width: 100%;"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root noMargin_fl8qkup MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined"
            data-shrink="true"
            for="tableFilterBox"
            id="tableFilterBox-label"
          >
            Filter
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root noLeftPadding_f106pxd4 MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart"
          >
            <div
              class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                style="color: rgb(128, 134, 139); padding-right: 16px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
              </svg>
            </div>
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart"
              id="tableFilterBox"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-49 MuiOutlinedInput-notchedOutline filterBorderRadius_f1ypp5hy"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled-51 PrivateNotchedOutline-legendNotched-52"
              >
                <span>
                  Filter
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="header_f15jqnss"
      >
        <div
          class="columnName_f1kdqshe cell_fy8nr2z selectionToggle_f1ds3nvo"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-53 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
          >
            <span
              class="MuiIconButton-label"
            >
              <input
                class="PrivateSwitchBase-input-56"
                data-indeterminate="false"
                type="checkbox"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </span>
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 20%;"
          title="Version name"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Version name
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 60%;"
          title="Description"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x"
            role="button"
            tabindex="0"
            title="Cannot sort by this column"
          >
            Description
          </span>
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 20%;"
          title="Uploaded on"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x MuiTableSortLabel-active"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Uploaded on
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="scrollContainer_fea2b5v"
        style="min-height: 60px;"
      >
        <div
          class="expandableContainer_f1l0zr01"
        >
          <div
            aria-checked="false"
            class="tableRow row_f12b5y4d"
            data-row-id="test-pipeline-version-id0"
            data-testid="table-row"
            role="checkbox"
            tabindex="-1"
          >
            <div
              class="cell_fy8nr2z selectionToggle_f1ds3nvo"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-53 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <input
                    class="PrivateSwitchBase-input-56"
                    data-indeterminate="false"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 20%;"
            >
              <a
                class="link_f3dwag7"
                href="/pipelines/details/pipeline/version/test-pipeline-version-id0"
                title="Name: "
              >
                test pipeline version name0
              </a>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 60%;"
            >
              <span
                class=""
                title=""
              >
                <span />
              </span>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 20%;"
            >
              -
            </div>
          </div>
        </div>
        <div
          class="expandableContainer_f1l0zr01"
        >
          <div
            aria-checked="false"
            class="tableRow row_f12b5y4d"
            data-row-id="test-pipeline-version-id1"
            data-testid="table-row"
            role="checkbox"
            tabindex="-1"
          >
            <div
              class="cell_fy8nr2z selectionToggle_f1ds3nvo"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-53 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <input
                    class="PrivateSwitchBase-input-56"
                    data-indeterminate="false"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 20%;"
            >
              <a
                class="link_f3dwag7"
                href="/pipelines/details/pipeline/version/test-pipeline-version-id1"
                title="Name: "
              >
                test pipeline version name1
              </a>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 60%;"
            >
              <span
                class=""
                title=""
              >
                <span />
              </span>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 20%;"
            >
              -
            </div>
          </div>
        </div>
        <div
          class="expandableContainer_f1l0zr01"
        >
          <div
            aria-checked="false"
            class="tableRow row_f12b5y4d"
            data-row-id="test-pipeline-version-id2"
            data-testid="table-row"
            role="checkbox"
            tabindex="-1"
          >
            <div
              class="cell_fy8nr2z selectionToggle_f1ds3nvo"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-53 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <input
                    class="PrivateSwitchBase-input-56"
                    data-indeterminate="false"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 20%;"
            >
              <a
                class="link_f3dwag7"
                href="/pipelines/details/pipeline/version/test-pipeline-version-id2"
                title="Name: "
              >
                test pipeline version name2
              </a>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 60%;"
            >
              <span
                class=""
                title=""
              >
                <span />
              </span>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 20%;"
            >
              -
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer_f1fl9hjk"
      >
        <span
          class="fzbgmju"
        >
          Rows per page:
        </span>
        <div
          class="MuiFormControl-root MuiTextField-root verticalAlignInitial_fclh73n rowsPerPage_fvpkhlp"
        >
          <div
            class="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
          >
            <div
              aria-haspopup="listbox"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
              role="button"
              tabindex="0"
            >
              10
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              tabindex="-1"
              value="10"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSelect-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
        <button
          class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </span>
        </button>
        <button
          class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PipelineVersionList > renders a list of one pipeline version 1`] = `
<DocumentFragment>
  <div>
    <div
      class="pageOverflowHidden_f15djeb2"
    >
      <div>
        <div
          class="MuiFormControl-root MuiTextField-root filterBox_frxzdj2"
          spellcheck="false"
          style="height: 48px; max-width: 100%; width: 100%;"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root noMargin_fl8qkup MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined"
            data-shrink="true"
            for="tableFilterBox"
            id="tableFilterBox-label"
          >
            Filter
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root noLeftPadding_f106pxd4 MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart"
          >
            <div
              class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                style="color: rgb(128, 134, 139); padding-right: 16px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
              </svg>
            </div>
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart"
              id="tableFilterBox"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-9 MuiOutlinedInput-notchedOutline filterBorderRadius_f1ypp5hy"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled-11 PrivateNotchedOutline-legendNotched-12"
              >
                <span>
                  Filter
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="header_f15jqnss"
      >
        <div
          class="columnName_f1kdqshe cell_fy8nr2z selectionToggle_f1ds3nvo"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-13 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
          >
            <span
              class="MuiIconButton-label"
            >
              <input
                class="PrivateSwitchBase-input-16"
                data-indeterminate="false"
                type="checkbox"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </span>
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 20%;"
          title="Version name"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Version name
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 60%;"
          title="Description"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x"
            role="button"
            tabindex="0"
            title="Cannot sort by this column"
          >
            Description
          </span>
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 20%;"
          title="Uploaded on"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x MuiTableSortLabel-active"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Uploaded on
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="scrollContainer_fea2b5v"
        style="min-height: 60px;"
      >
        <div
          class="expandableContainer_f1l0zr01"
        >
          <div
            aria-checked="false"
            class="tableRow row_f12b5y4d"
            data-testid="table-row"
            role="checkbox"
            tabindex="-1"
          >
            <div
              class="cell_fy8nr2z selectionToggle_f1ds3nvo"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-13 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <input
                    class="PrivateSwitchBase-input-16"
                    data-indeterminate="false"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 20%;"
            >
              <a
                class="link_f3dwag7"
                href="/pipelines/details/pipeline/version/undefined"
                title="Name: pipelineversion1"
              >
                pipelineversion1
              </a>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 60%;"
            >
              <span
                class=""
                title=""
              >
                <span />
              </span>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 20%;"
            >
              9/22/2018, 11:05:48 AM
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer_f1fl9hjk"
      >
        <span
          class="fzbgmju"
        >
          Rows per page:
        </span>
        <div
          class="MuiFormControl-root MuiTextField-root verticalAlignInitial_fclh73n rowsPerPage_fvpkhlp"
        >
          <div
            class="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
          >
            <div
              aria-haspopup="listbox"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
              role="button"
              tabindex="0"
            >
              10
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              tabindex="-1"
              value="10"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSelect-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
        <button
          class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </span>
        </button>
        <button
          class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PipelineVersionList > renders a list of one pipeline version with description 1`] = `
<DocumentFragment>
  <div>
    <div
      class="pageOverflowHidden_f15djeb2"
    >
      <div>
        <div
          class="MuiFormControl-root MuiTextField-root filterBox_frxzdj2"
          spellcheck="false"
          style="height: 48px; max-width: 100%; width: 100%;"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root noMargin_fl8qkup MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined"
            data-shrink="true"
            for="tableFilterBox"
            id="tableFilterBox-label"
          >
            Filter
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root noLeftPadding_f106pxd4 MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart"
          >
            <div
              class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                style="color: rgb(128, 134, 139); padding-right: 16px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
              </svg>
            </div>
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart"
              id="tableFilterBox"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-17 MuiOutlinedInput-notchedOutline filterBorderRadius_f1ypp5hy"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled-19 PrivateNotchedOutline-legendNotched-20"
              >
                <span>
                  Filter
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="header_f15jqnss"
      >
        <div
          class="columnName_f1kdqshe cell_fy8nr2z selectionToggle_f1ds3nvo"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-21 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
          >
            <span
              class="MuiIconButton-label"
            >
              <input
                class="PrivateSwitchBase-input-24"
                data-indeterminate="false"
                type="checkbox"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </span>
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 20%;"
          title="Version name"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Version name
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 60%;"
          title="Description"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x"
            role="button"
            tabindex="0"
            title="Cannot sort by this column"
          >
            Description
          </span>
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 20%;"
          title="Uploaded on"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x MuiTableSortLabel-active"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Uploaded on
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="scrollContainer_fea2b5v"
        style="min-height: 60px;"
      >
        <div
          class="expandableContainer_f1l0zr01"
        >
          <div
            aria-checked="false"
            class="tableRow row_f12b5y4d"
            data-testid="table-row"
            role="checkbox"
            tabindex="-1"
          >
            <div
              class="cell_fy8nr2z selectionToggle_f1ds3nvo"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-21 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <input
                    class="PrivateSwitchBase-input-24"
                    data-indeterminate="false"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 20%;"
            >
              <a
                class="link_f3dwag7"
                href="/pipelines/details/pipeline/version/undefined"
                title="Name: pipelineversion1"
              >
                pipelineversion1
              </a>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 60%;"
            >
              <span
                class=""
                title="pipelineversion1 description"
              >
                <span>
                  pipelineversion1 description
                </span>
              </span>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 20%;"
            >
              9/22/2018, 11:05:48 AM
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer_f1fl9hjk"
      >
        <span
          class="fzbgmju"
        >
          Rows per page:
        </span>
        <div
          class="MuiFormControl-root MuiTextField-root verticalAlignInitial_fclh73n rowsPerPage_fvpkhlp"
        >
          <div
            class="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
          >
            <div
              aria-haspopup="listbox"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
              role="button"
              tabindex="0"
            >
              10
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              tabindex="-1"
              value="10"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSelect-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
        <button
          class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </span>
        </button>
        <button
          class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PipelineVersionList > renders a list of one pipeline version with error 1`] = `
<DocumentFragment>
  <div>
    <div
      class="pageOverflowHidden_f15djeb2"
    >
      <div>
        <div
          class="MuiFormControl-root MuiTextField-root filterBox_frxzdj2"
          spellcheck="false"
          style="height: 48px; max-width: 100%; width: 100%;"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root noMargin_fl8qkup MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined"
            data-shrink="true"
            for="tableFilterBox"
            id="tableFilterBox-label"
          >
            Filter
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root noLeftPadding_f106pxd4 MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart"
          >
            <div
              class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                style="color: rgb(128, 134, 139); padding-right: 16px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
              </svg>
            </div>
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart"
              id="tableFilterBox"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-33 MuiOutlinedInput-notchedOutline filterBorderRadius_f1ypp5hy"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled-35 PrivateNotchedOutline-legendNotched-36"
              >
                <span>
                  Filter
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="header_f15jqnss"
      >
        <div
          class="columnName_f1kdqshe cell_fy8nr2z selectionToggle_f1ds3nvo"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-37 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
          >
            <span
              class="MuiIconButton-label"
            >
              <input
                class="PrivateSwitchBase-input-40"
                data-indeterminate="false"
                type="checkbox"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </span>
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 20%;"
          title="Version name"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Version name
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 60%;"
          title="Description"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x"
            role="button"
            tabindex="0"
            title="Cannot sort by this column"
          >
            Description
          </span>
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 20%;"
          title="Uploaded on"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x MuiTableSortLabel-active"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Uploaded on
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="scrollContainer_fea2b5v"
        style="min-height: 60px;"
      >
        <div
          class="expandableContainer_f1l0zr01"
        >
          <div
            aria-checked="false"
            class="tableRow row_f12b5y4d"
            data-testid="table-row"
            role="checkbox"
            tabindex="-1"
          >
            <div
              class="cell_fy8nr2z selectionToggle_f1ds3nvo"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-37 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <input
                    class="PrivateSwitchBase-input-40"
                    data-indeterminate="false"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 20%;"
            >
              <a
                class="link_f3dwag7"
                href="/pipelines/details/pipeline/version/undefined"
                title="Name: pipeline1"
              >
                pipeline1
              </a>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 60%;"
            >
              <span
                class=""
                title=""
              >
                <span />
              </span>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 20%;"
            >
              9/22/2018, 11:05:48 AM
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer_f1fl9hjk"
      >
        <span
          class="fzbgmju"
        >
          Rows per page:
        </span>
        <div
          class="MuiFormControl-root MuiTextField-root verticalAlignInitial_fclh73n rowsPerPage_fvpkhlp"
        >
          <div
            class="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
          >
            <div
              aria-haspopup="listbox"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
              role="button"
              tabindex="0"
            >
              10
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              tabindex="-1"
              value="10"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSelect-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
        <button
          class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </span>
        </button>
        <button
          class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PipelineVersionList > renders a list of one pipeline version without created date 1`] = `
<DocumentFragment>
  <div>
    <div
      class="pageOverflowHidden_f15djeb2"
    >
      <div>
        <div
          class="MuiFormControl-root MuiTextField-root filterBox_frxzdj2"
          spellcheck="false"
          style="height: 48px; max-width: 100%; width: 100%;"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root noMargin_fl8qkup MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined"
            data-shrink="true"
            for="tableFilterBox"
            id="tableFilterBox-label"
          >
            Filter
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root noLeftPadding_f106pxd4 MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart"
          >
            <div
              class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                style="color: rgb(128, 134, 139); padding-right: 16px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
              </svg>
            </div>
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart"
              id="tableFilterBox"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-25 MuiOutlinedInput-notchedOutline filterBorderRadius_f1ypp5hy"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled-27 PrivateNotchedOutline-legendNotched-28"
              >
                <span>
                  Filter
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="header_f15jqnss"
      >
        <div
          class="columnName_f1kdqshe cell_fy8nr2z selectionToggle_f1ds3nvo"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-29 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
          >
            <span
              class="MuiIconButton-label"
            >
              <input
                class="PrivateSwitchBase-input-32"
                data-indeterminate="false"
                type="checkbox"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </span>
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 20%;"
          title="Version name"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Version name
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 60%;"
          title="Description"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x"
            role="button"
            tabindex="0"
            title="Cannot sort by this column"
          >
            Description
          </span>
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 20%;"
          title="Uploaded on"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x MuiTableSortLabel-active"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Uploaded on
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="scrollContainer_fea2b5v"
        style="min-height: 60px;"
      >
        <div
          class="expandableContainer_f1l0zr01"
        >
          <div
            aria-checked="false"
            class="tableRow row_f12b5y4d"
            data-testid="table-row"
            role="checkbox"
            tabindex="-1"
          >
            <div
              class="cell_fy8nr2z selectionToggle_f1ds3nvo"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-29 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <input
                    class="PrivateSwitchBase-input-32"
                    data-indeterminate="false"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 20%;"
            >
              <a
                class="link_f3dwag7"
                href="/pipelines/details/pipeline/version/undefined"
                title="Name: pipelineversion1"
              >
                pipelineversion1
              </a>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 60%;"
            >
              <span
                class=""
                title=""
              >
                <span />
              </span>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 20%;"
            >
              -
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer_f1fl9hjk"
      >
        <span
          class="fzbgmju"
        >
          Rows per page:
        </span>
        <div
          class="MuiFormControl-root MuiTextField-root verticalAlignInitial_fclh73n rowsPerPage_fvpkhlp"
        >
          <div
            class="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
          >
            <div
              aria-haspopup="listbox"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
              role="button"
              tabindex="0"
            >
              10
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              tabindex="-1"
              value="10"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSelect-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
        <button
          class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </span>
        </button>
        <button
          class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PipelineVersionList > renders an empty list with empty state message 1`] = `
<DocumentFragment>
  <div>
    <div
      class="pageOverflowHidden_f15djeb2"
    >
      <div>
        <div
          class="MuiFormControl-root MuiTextField-root filterBox_frxzdj2"
          spellcheck="false"
          style="height: 48px; max-width: 100%; width: 100%;"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root noMargin_fl8qkup MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined"
            data-shrink="true"
            for="tableFilterBox"
            id="tableFilterBox-label"
          >
            Filter
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root noLeftPadding_f106pxd4 MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart"
          >
            <div
              class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                style="color: rgb(128, 134, 139); padding-right: 16px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
              </svg>
            </div>
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart"
              id="tableFilterBox"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-1 MuiOutlinedInput-notchedOutline filterBorderRadius_f1ypp5hy"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled-3 PrivateNotchedOutline-legendNotched-4"
              >
                <span>
                  Filter
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="header_f15jqnss"
      >
        <div
          class="columnName_f1kdqshe cell_fy8nr2z selectionToggle_f1ds3nvo"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-5 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
          >
            <span
              class="MuiIconButton-label"
            >
              <input
                class="PrivateSwitchBase-input-8"
                data-indeterminate="false"
                type="checkbox"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </span>
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 20%;"
          title="Version name"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Version name
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 60%;"
          title="Description"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x"
            role="button"
            tabindex="0"
            title="Cannot sort by this column"
          >
            Description
          </span>
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 20%;"
          title="Uploaded on"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x MuiTableSortLabel-active"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Uploaded on
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="scrollContainer_fea2b5v"
        style="min-height: 60px;"
      >
        <div
          class="emptyMessage_f1v5g0b7"
        >
          No pipeline versions found.
        </div>
      </div>
      <div
        class="footer_f1fl9hjk"
      >
        <span
          class="fzbgmju"
        >
          Rows per page:
        </span>
        <div
          class="MuiFormControl-root MuiTextField-root verticalAlignInitial_fclh73n rowsPerPage_fvpkhlp"
        >
          <div
            class="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
          >
            <div
              aria-haspopup="listbox"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
              role="button"
              tabindex="0"
            >
              10
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              tabindex="-1"
              value="10"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSelect-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
        <button
          class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </span>
        </button>
        <button
          class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
